# python-template

./: .editorconfig  404.html  Makefile  README.md  index.html  mkdocs.yml  prospector.yaml  pyproject.toml  sitemap.xml
docs/: index.md
docs/tools/: poetry.md
search/: search_index.json
tools/poetry/: index.html
