[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Samuel <fujimoto.samuel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.12"

[tool.poetry.dev-dependencies]
blue = "^0.9.0"
isort = "^5.10.1"
prospector = "^1.7.7"
mypy = "^0.950"
safety = "^1.10.3"
mkdocs = "^1.3.0"
pymdown-extensions = "^9.4"
mkdocs-material = "^8.2.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
